changing routerlinks to a

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <div routerLink="/">Overview</div>
-  <div routerLink="/login">Login</div>
-  <div routerLink="/register">Register</div>
+  <a routerLink="/" routerLinkActive="active">Overview</a>
+  <a routerLink="/login" routerLinkActive="active">Login</a>
+  <a routerLink="/register" routerLinkActive="active">Register</a>
 </nav>
 <router-outlet></router-outlet>
