adding login functions

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<form action="">
+  <input [(ngModel)]="formData.email" type="email" name="email">
+  <input [(ngModel)]="formData.password" type="password" name="password">
+  <button (click)="loginUser()">register</button>
+</form>
