add an placeholder overview to test

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <form action="">
-  <input [(ngModel)]="registerUserData.email" type="email" name="email">
-  <input [(ngModel)]="registerUserData.password" type="password" name="password">
+  <input [(ngModel)]="formData.email" type="email" name="email">
+  <input [(ngModel)]="formData.password" type="password" name="password">
   <button (click)="registerUser()">register</button>
 </form>
