adding auth guard; fixing api service; add home comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
-  <a routerLink="/" routerLinkActive="active">Overview</a>
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/overview" routerLinkActive="active">Overview</a>
   <a routerLink="/login" routerLinkActive="active">Login</a>
   <a routerLink="/register" routerLinkActive="active">Register</a>
 </nav>
