save token on login as well

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <form action="">
   <input [(ngModel)]="formData.email" type="email" name="email">
   <input [(ngModel)]="formData.password" type="password" name="password">
-  <button (click)="loginUser()">register</button>
+  <button (click)="loginUser()">login</button>
 </form>
