--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,7 @@
-<form action="">
-  <input [(ngModel)]="formData.email" type="email" name="email">
-  <input [(ngModel)]="formData.password" type="password" name="password">
-  <button (click)="registerUser()">register</button>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <input type="email" name="email" formControlName="email">
+  <p *ngIf="checkInputField('email')" class="error">email is invalid</p>
+  <input type="password" name="password" formControlName="password">
+  <p *ngIf="checkInputField('password')" class="error">password is invalid</p>
+  <input type="submit" value="register">
 </form>
