save userDetails on start and login/register

--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,3 +1,4 @@
+<div>{{auth.userDetails.email}}</div>
 <div *ngFor="let planningItem of planningData">
   <div>{{planningItem.title}}</div>
   <div>{{planningItem.date}}</div>
