--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,12 +1,31 @@
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <input type="email" name="email" formControlName="email">
-  <p *ngIf="formService.checkInputField(registerForm, 'email')" class="error">email is invalid</p>
-  <input type="password" name="password" formControlName="password">
-  <p *ngIf="formService.checkInputField(registerForm, 'password')" class="error">password is invalid</p>
-  <select name="company" formControlName="company">
-    <option value="">select company</option>
-    <option *ngFor="let company of companyService.companies" value="company._id">{{company.name}}</option>
-  </select>
-  <p *ngIf="formService.checkInputField(registerForm, 'company')" class="error">company is invalid</p>
-  <input type="submit" value="register">
+  <div class="formGroup">
+    <input type="email" name="email" formControlName="email">
+    <p *ngIf="formService.checkInputField(registerForm, 'email')" class="error">email is invalid</p>
+  </div>
+  <div class="formGroup">
+    <input type="password" name="password" formControlName="password">
+    <p *ngIf="formService.checkInputField(registerForm, 'password')" class="error">password is invalid</p>
+  </div>
+  <div class="formGroup">
+    <select name="company" formControlName="company">
+      <option value="">select company</option>
+      <option *ngFor="let company of companyService.companies" value="company._id">{{company.name}}</option>
+    </select>
+    <p *ngIf="formService.checkInputField(registerForm, 'company')" class="error">company is invalid</p>
+  </div>
+  
+  
+  <div class="formGroup">
+    <select name="role" formControlName="role">
+      <option value="">select role</option>
+      <option *ngFor="let role of roleService.companies" value="role._id">{{role.name}}</option>
+    </select>
+    <p *ngIf="formService.checkInputField(registerForm, 'role')" class="error">role is invalid</p>
+  </div>
+
+  <div class="formGroup">
+    <input type="submit" value="register">
+  </div>
+  
 </form>
