--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,13 +1,13 @@
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <div class="formGroup">
+  <div class="inputGroup">
     <input type="email" name="email" formControlName="email">
     <p *ngIf="formService.checkInputField(registerForm, 'email')" class="error">email is invalid</p>
   </div>
-  <div class="formGroup">
+  <div class="inputGroup">
     <input type="password" name="password" formControlName="password">
     <p *ngIf="formService.checkInputField(registerForm, 'password')" class="error">password is invalid</p>
   </div>
-  <div class="formGroup">
+  <div class="inputGroup">
     <select name="company" formControlName="company">
       <option value="">select company</option>
       <option *ngFor="let company of companyService.getCompanies()" [value]="company._id">{{company.name}}</option>
@@ -16,7 +16,7 @@
   </div>
   
   
-  <div class="formGroup">
+  <div class="inputGroup">
     <select name="role" formControlName="role">
       <option value="">select role</option>
       <option *ngFor="let role of auth.getUserRoles()" [value]="role.type">{{role.name}}</option>
@@ -24,7 +24,7 @@
     <p *ngIf="formService.checkInputField(registerForm, 'role')" class="error">role is invalid</p>
   </div>
 
-  <div class="formGroup">
+  <div class="inputGroup">
     <input type="submit" value="register">
   </div>
   
