--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <a routerLink="/" routerLinkActive="active">Home</a>
-  <a routerLink="/overview" routerLinkActive="active">Overview</a>
+  <a routerLink="/projects" routerLinkActive="active">Projects</a>
   <a routerLink="/login" *ngIf="!auth.loggedIn()" routerLinkActive="active">Login</a>
   <a routerLink="/register" *ngIf="!auth.loggedIn()" routerLinkActive="active">Register</a>
   <a routerLink="/admin/companies" *ngIf="auth.loggedIn()" routerLinkActive="active">Admin companies</a>
