--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -7,5 +7,5 @@
       {{ project.hourPlanned }} - 
       {{ project.status }}
     </div>
-    <a [routerLink]="[ '/project', project._id ]">meer info</a>
+    <a [routerLink]="[ '/projects', project._id ]">meer info</a>
 </div>
