--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="[ '/admin/project', project._id ]">edit</a>
+<a [routerLink]="[ '/admin/projects', project._id ]">edit</a>
 <div>
   <div class="label">company</div>
   <div class="value">{{project.company}}</div>
