--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,13 @@
 <nav>
   <a routerLink="/projects" routerLinkActive="active">Projects</a>
+  <a routerLink="/map" *ngIf="auth.isAdmin()" routerLinkActive="active">Map</a>
+  <a routerLink="/admin" *ngIf="auth.isAdmin()" routerLinkActive="active">Admin
+    <div class="submenu">
+      <a routerLink="/admin/users" routerLinkActive="active">Users</a>
+      <a routerLink="/admin/companies" routerLinkActive="active">Companies</a>
+      <a routerLink="/admin/projects" routerLinkActive="active">Projects</a>
+    </div>
+  </a>
   <a routerLink="/login" *ngIf="!auth.loggedIn()" routerLinkActive="active">Login</a>
-  <a routerLink="/register" *ngIf="!auth.loggedIn()" routerLinkActive="active">Register</a>
-  <a routerLink="/admin/companies" *ngIf="auth.loggedIn()" routerLinkActive="active">Admin companies</a>
-  <a *ngIf="auth.loggedIn()" (click)="auth.logoutUser()">log out</a>
+  <a *ngIf="auth.loggedIn()" (click)="auth.logoutUser()">Logout</a>
 </nav>
