--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,12 +1,17 @@
+@import 'variables';
+
 nav {
     padding: 0;
     float: left;
     width: 100%;
-    border-top: 1px solid #ededed;
-    border-bottom: 1px solid #ededed;
+    margin-bottom: 15px;
+    border-top: 1px solid $infiltro-border-grey;
+    border-bottom: 1px solid $infiltro-border-grey;
 }
 
 a {
+    display: block;
+    position: relative;
     float: left;
     color: inherit;
     text-decoration: none;
@@ -17,10 +22,37 @@ a {
 
     &:hover {
         color: #ff0000;
+
+        .submenu {
+            display: block;
+        }
     }
 
     &.active {
         color: #6a6a6a;
         font-weight: 700;
+    }
+}
+
+.submenu {
+    position: absolute;
+    z-index: 1;
+    display: none;
+    left: 0;
+    top: 28px;
+
+    a {
+        padding: .5em 1.5em;
+        font-size: .85em;
+        font-weight: 300;
+        white-space: nowrap;
+        color: black;
+        background: $infiltro-border-grey;
+        width: 100%;
+
+        &:hover {
+            color: #777;
+            background: #e2e2e2;
+        }
     }
 }
