--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import 'variables';
 
 * {
     padding: 0;
@@ -9,8 +10,20 @@
 body {
     font-family: 'Open Sans', Tahoma, Helvetica;
     font-size: 13px;
-    color: #777;
+    color: $infiltro-grey;
     line-height: 1.5;
+}
+
+h1 {
+    margin-top: 0;
+    color: #FF0000;
+    font-size: 1.2em;
+}
+
+h2 {
+    color: #FF0000;
+    font-size: 1em;
+    font-weight: 800;
 }
 
 .wrapper {
@@ -21,7 +34,13 @@ body {
 
 .logo {
     width: 350px;
+
     img {
         cursor: pointer;
     }
+}
+
+main {
+    clear: both;
+    padding: 15px;
 }
