delete project and update deletion of company

--- a/src/app/components/admin-project/admin-project.component.html
+++ b/src/app/components/admin-project/admin-project.component.html
@@ -185,4 +185,11 @@
       <input type="submit" value="save">
     </div>
   </div>
+
+  <div class="formSection">
+    <div class="inputGroup">
+      <div></div>
+      <div (click)="removeProject()">delete this project</div>
+    </div>
+  </div>
 </form>
