--- a/src/app/components/admin-companies/admin-companies.component.html
+++ b/src/app/components/admin-companies/admin-companies.component.html
@@ -4,6 +4,6 @@
 
 <form [formGroup]="companyForm" (ngSubmit)="onSubmit()">
   <input type="text" name="name" formControlName="name">
-  <p *ngIf="formService.checkInputField(companyForm, 'name')" class="error">name is invalid</p>
+  <p *ngIf="formService.checkInputField(companyForm, 'name', submitted)" class="error">!</p>
   <input type="submit" value="add company">
 </form>
