--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -42,7 +42,7 @@
       <div class="label">postalCode</div>
       <div class="value">{{project.postalCode}}</div>
     </div>
-    <div class="item">
+    <div class="item textarea">
       <div class="label">extraInfoAddress</div>
       <div class="value">{{project.extraInfoAddress}}</div>
     </div>
@@ -60,7 +60,7 @@
       <div class="label">email</div>
       <div class="value">{{project.email}}</div>
     </div>
-    <div class="item">
+    <div class="item textarea">
       <div class="label">extraInfoContact</div>
       <div class="value">{{project.extraInfoContact}}</div>
     </div>
@@ -102,7 +102,7 @@
     </div>
   </div>
   <div class="projectSection">
-    <div class="item">
+    <div class="item textarea">
       <div class="label">comments</div>
       <div class="value">{{project.comments}}</div>
     </div>
